fix(dashboard): align map legend with toggle
Fixes #581

--- a/src/pages/dashboard/charts/map.scss
+++ b/src/pages/dashboard/charts/map.scss
@@ -41,7 +41,7 @@
 
 .map-legend {
   position: absolute;
-  bottom: 510px;
+  bottom: 539px;
   right: 20px;
   @media screen and (max-width: $viewport-sm) {
     bottom: 300px;
